--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "prop-types": "*",
     "react": "*",
     "react-dom": "*",
-    "react-redux": "*",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "redux": "*",
     "styled-components": "*"
   }
