work on text arrangements

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "clean-webpack-plugin": "*",
     "copy-webpack-plugin": "*",
     "cross-env": "*",
-    "css-loader": "*",
+    "css-loader": "^5.0.1",
     "cssnano": "*",
     "enzyme": "*",
     "enzyme-adapter-react-16": "*",
@@ -45,9 +45,9 @@
     "postcss-loader": "*",
     "postcss-preset-env": "*",
     "resolve-url-loader": "*",
-    "sass": "*",
-    "sass-loader": "*",
-    "style-loader": "*",
+    "sass": "^1.29.0",
+    "sass-loader": "^10.0.5",
+    "style-loader": "^2.0.0",
     "terser-webpack-plugin": "*",
     "webpack": "*",
     "webpack-cli": "*",
@@ -55,6 +55,7 @@
     "webpack-merge": "*"
   },
   "dependencies": {
+    "node-sass": "^5.0.0",
     "prop-types": "*",
     "react": "*",
     "react-dom": "*",
