--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "webpack-merge": "*"
   },
   "dependencies": {
+    "emailjs-com": "^2.6.4",
     "node-sass": "^5.0.0",
     "prop-types": "*",
     "react": "*",
