--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "redux": "*",
-    "styled-components": "*"
+    "styled-components": "*",
+    "tailwindcss": "^2.0.1"
   }
 }
